MultiVM/template.json
{
    "$schema": "https://schema.management.azure.com/schemas/2019-04-01/deploymentTemplate.json#",
    "contentVersion": "1.0.0.0",
    "parameters": {
        "storage_account_name": {
           "type": "string",
           "metadata": {
                "description": "Name of the storage account"
            }
        },
        "storage_account_sku": {
           "type": "string",
           "metadata": {
                "description": "SKU of the storage account"
            },
            "allowedValues": [
                "Premium_LRS",
                "Premium_ZRS",
                "Standard_GRS",
                "Standard_GZRS",
                "Standard_LRS",
                "Standard_RAGRS",
                "Standard_RAGZRS",
                "Standard_ZRS"
            ],
            "defaultValue": "Standard_LRS"        
        },
        "virtual_network_name": {
           "type": "string",
           "metadata": {
                "description": "Name of the virtual network"
            }
        },
        "virtual_machine_name": {
           "type": "string",
           "metadata": {
                "description": "Name of the virtual machine"
            }
        },
        "virtual_machine_size": {
           "type": "string",
           "metadata": {
                "description": "Size of the virtual machine"
            }
        },
        "adminUser": {
           "type": "string"
        },
         "adminPassword": {
           "type": "string"
        },
        "count_value": {
           "type": "int"
        }
    },
    "variables": {
        "virtual_network": {
        "virtual_network_address": ["172.16.0.0/24"],
        "subnet_name": "saanvikit-snet-01",
        "subnet_address": "172.16.0.0/25"
        },
        // "virtual_network_address": ["172.16.0.0/24"],
        // "subnet_name": "saanvikit-snet-01",
        // "subnet_address": "172.16.0.0/25",
        "tags": {
            "project": "SAANVIK IT",
            "createdby": "Ramakrishna",
            "environment": "DEV"
        },
        "publicip_name": "saanvikit-pubip",
        "network_security_group_name": "saanvikit-nsg",
        "network_interface_name": "saanvikit-nic"
    },
    "resources": [
        {
            "type": "Microsoft.Storage/storageAccounts",
            "name": "[toLower(parameters('storage_account_name'))]",
            "location": "[resourceGroup().location]",
            "apiVersion": "2018-07-01",
            "tags": "[variables('tags')]",
            "sku": {
                "name": "[parameters('storage_account_sku')]"
            },
            "kind": "StorageV2",
            "properties": {}
        },
        {
            "name": "[parameters('virtual_network_name')]",
            "type": "Microsoft.Network/virtualNetworks",
            "apiVersion": "2018-08-01",
            "location": "[resourceGroup().location]",
            "tags": "[variables('tags')]",
            "dependsOn": [
                "[resourceId('Microsoft.Network/networkSecurityGroups',variables('network_security_group_name'))]"
            ],
            "properties": {
                "addressSpace": {
                    "addressPrefixes": "[variables('virtual_network').virtual_network_address]"
                },
                "subnets": [
                    {
                        "name": "[variables('virtual_network').subnet_name]",
                        "properties": {
                            "addressPrefix": "[variables('virtual_network').subnet_address]",
                            "networkSecurityGroup": {
                                "id": "[resourceId('Microsoft.Network/networkSecurityGroups',variables('network_security_group_name'))]"
                            }
                        }
                    }
                ]
            }
        },
        {
            "name": "[concat(variables('publicip_name'),'-',copyIndex(1))]",
            "type": "Microsoft.Network/publicIPAddresses",
            "apiVersion": "2020-11-01",
            "location": "[resourceGroup().location]",
            "tags": "[variables('tags')]",
             "copy": {
            "name": "PublicIPCopy",
            "count": "[parameters('count_value')]"
            },
            "properties": {
                "publicIPAllocationMethod": "Dynamic"
            }
        },
        {
            "name": "[variables('network_security_group_name')]",
            "type": "Microsoft.Network/networkSecurityGroups",
            "apiVersion": "2018-08-01",
            "location": "[resourceGroup().location]",
            "properties": {
                "securityRules": [
                    {
                        "name": "RDP",
                        "properties": {
                            "description": "Allow_RDP",
                            "protocol": "Tcp",
                            "sourcePortRange": "*",
                            "destinationPortRange": "3389",
                            "sourceAddressPrefix": "*",
                            "destinationAddressPrefix": "*",
                            "access": "Allow",
                            "priority": 100,
                            "direction": "Inbound"
                        }
                    },
                    {
                        "name": "HTTP",
                        "properties": {
                            "description": "Allow_HTTP",
                            "protocol": "Tcp",
                            "sourcePortRange": "*",
                            "destinationPortRange": "80",
                            "sourceAddressPrefix": "*",
                            "destinationAddressPrefix": "*",
                            "access": "Allow",
                            "priority": 200,
                            "direction": "Inbound"
                        }
                    }
                ]
            }
        },
        {
            "name": "[concat(variables('network_interface_name'),'-',copyIndex(1))]",
            "type": "Microsoft.Network/networkInterfaces",
            "apiVersion": "2018-08-01",
            "location": "[resourceGroup().location]",
            "tags": "[variables('tags')]",
            "copy": {
            "name": "NICCopy",
            "count": "[parameters('count_value')]"
            },
            "dependsOn": [
                "[resourceId('Microsoft.Network/virtualNetworks', parameters('virtual_network_name'))]",
                "[resourceId('Microsoft.Network/publicIPAddresses', concat(variables('publicip_name'),'-',copyIndex(1)))]"
            ],
            "properties": {
                "ipConfigurations": [
                    {
                        "name": "ipConfig1",
                        "properties": {
                            "privateIPAllocationMethod": "Dynamic",
                            "subnet": {
                                "id": "[resourceId('Microsoft.Network/virtualNetworks/subnets', parameters('virtual_network_name'), variables('virtual_network').subnet_name)]"
                            },
                            "publicIPAddress": {
                                "id": "[resourceId('Microsoft.Network/publicIPAddresses', concat(variables('publicip_name'),'-',copyIndex(1)))]"
                            }
                        }
                    }
                ]
            }
        },
        {
            "type": "Microsoft.Compute/disks",
            "apiVersion": "2018-06-01",
            "name": "[concat(parameters('virtual_machine_name'),'-datadisk','-',copyIndex(1))]",
            "location": "[resourceGroup().location]",
            "sku": {
                "name": "Standard_LRS"
            },
            "copy": {
            "name": "DataDiskCopy",
            "count": "[parameters('count_value')]"
            },
            "properties": {
                "creationData": {
                    "createOption": "Empty"
                },
                "diskSizeGB": 10
            }
        },
        {
            "name": "[concat(parameters('virtual_machine_name'),'-',copyIndex(1))]",
            "type": "Microsoft.Compute/virtualMachines",
            "apiVersion": "2017-03-30",
            "location": "[resourceGroup().location]",
            "dependsOn": [
                "[resourceId('Microsoft.Compute/disks',concat(parameters('virtual_machine_name'),'-datadisk','-',copyIndex(1)))]",
                "[resourceId('Microsoft.Network/networkInterfaces', concat(variables('network_interface_name'),'-',copyIndex(1)))]"
            ],
            "tags": "[variables('tags')]",
            "copy": {
            "name": "VMCopy",
            "count": "[parameters('count_value')]"
            },
            "properties": {
                "hardwareProfile": {
                    "vmSize": "[parameters('virtual_machine_size')]"
                },
                "osProfile": {
                    "computerName": "[concat(parameters('virtual_machine_name'),'-',copyIndex(1))]",
                    "adminUsername": "[parameters('adminUser')]",
                    "adminPassword": "[parameters('adminPassword')]"
                },
                "storageProfile": {
                    "imageReference": {
                        "publisher": "MicrosoftWindowsServer",
                        "offer": "WindowsServer",
                        "sku": "2022-Datacenter",
                        "version": "latest"
                    },
                    "osDisk": {
                        "name": "[concat(parameters('virtual_machine_name'),'-','osdisk','-',copyIndex(1))]",
                        "caching": "ReadWrite",
                        "createOption": "FromImage"
                    },
                     "dataDisks": [
                        {
                            "lun": 0,
                            "name": "[concat(parameters('virtual_machine_name'),'-datadisk','-',copyIndex(1))]",
                            "createOption": "attach",
                            "managedDisk": {
                                "id": "[resourceId('Microsoft.Compute/disks/', concat(parameters('virtual_machine_name'),'-datadisk','-',copyIndex(1)))]"
                            }
                        }
                    ]
                },
                "networkProfile": {
                    "networkInterfaces": [
                        {
                            "id": "[resourceId('Microsoft.Network/networkInterfaces', concat(variables('network_interface_name'),'-',copyIndex(1)))]"
                        }
                    ]
                }
            }
        }
    ],
    "outputs": {}
}
